2003-05-15  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/invoke.texi (Warning Options): Mark -Wmissing-declarations
	as a C only option.

2003-05-15  Wolfgang Bangerth <bangerth@dealii.org>

	* doc/bugreport.texi: Remove most of the bug reporting
	instructions and merge them into bugs.html.

2003-05-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* sparc.c (print_operand): Fix uninitialized warning.

2003-05-14  Mark Mitchell  <mark@codesourcery.com>

	* version.c: Reset to prerelease format.
	* doc/include/gcc-common.texi: Update version number.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-12  Mark Mitchell  <mark@codesourcery.com>

	PR other/10745
	* configure.in: Correct detection of GNU ld version number.
	* configure: Regenerated.

2003-05-08  J"orn Rennecke <joern.rennecke@superh.com>

	* sh.c (gen_block_redirect, split_branches): Use
	CODE_FOR_jump_compact instead of CODE_FOR_jump

2003-05-06  Eric Christopher  <echristo@redhat.com>

        * config/mips/linux.h: Fix typo.

2003-05-06  Ulrich Weigand  <uweigand@de.ibm.com>

	PR other/10650
	* unwind-dw2.c (uw_update_context_1): Don't set sp as cfa on s390.
	(uw_init_context_1): Set initial sp to outer cfa on s390.

2003-05-06  Mark Mitchell  <mark@codesourcery.com>

	PR other/10658
	* gcc.c (process_command): Update copyright date.

2003-05-06  Bruce Korb  <bkorb@gnu.org>

	* inclhack.def: fix up whitespace differences from mainline.
	mark fix tests that fail on BSD systems (like mainline).
	Fixup the solaris_mutex_init test to cope with Sol. 2.6 (like mainline).
	Removed unused SONY commentary (its obsolete anyway).
	(svr4_mach_defines): remove i860 machine from comment (like mainline).
	* gcc/fixinc/tests/base/pthread.h: solaris_mutex_init fix tests
	* gcc/fixinc/tests/base/testing.h: remove ^M chars from some mistake